更新 搜索 提示语

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -806,7 +806,9 @@
   "What does the symbol in the picture represent?": "Was repräsentiert das Symbol im Bild?",
   "Help me solve problems": "Helfen Sie mir, Probleme zu lösen",
   "Last for {{ time }} seconds": "Dauert {{ time }} Sekunden lang",
-  "Search the web": "Im Internet suchen",
+  "Search the Web": "Im Internet suchen",
+  "Search the Twitter": "Im Twitter suchen",
+  "Search the YouTube": "Im YouTube suchen",
   "search": "Suche",
   "Web Search": "Web suche",
   "YouTube Search": "YouTube suche",
