--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -806,6 +806,8 @@
   "Help me solve problems": "Ayúdame a resolver problemas",
   "Last for {{ time }} seconds": "Dura {{ time }} segundos",
   "Search the web": "Buscar en la web",
+  "Search the Twitter": "Buscar en la Twitter",
+  "Search the YouTube": "Buscar en la YouTube",
   "search": "buscar",
   "Web Search": "Búsqueda web",
   "YouTube Search": "Búsqueda YouTube",
