--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -805,6 +805,8 @@
   "Help me solve problems": "Aidez - moi à résoudre des problèmes",
   "Last for {{ time }} seconds": "Dure {{ time }} secondes",
   "Search the web": "Rechercher sur le web",
+  "Search the Twitter": "Rechercher sur le Twitter",
+  "Search the YouTube": "Rechercher sur le YouTube",
   "search": "recherche",
   "Web Search": "Recherche sur le web",
   "YouTube Search": "Recherche sur le YouTube",
