--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -806,6 +806,8 @@
   "Help me solve problems": "Bantu saya menyelesaikan masalah - masalah",
   "Last for {{ time }} seconds": "Berlangsung selama {{ time }} detik",
   "Search the web": "Cari di web",
+  "Search the Twitter": "Cari di Twitter",
+  "Search the YouTube": "Cari di YouTube",
   "search": "cari",
   "Web Search": "Pencarian web",
   "YouTube Search": "Pencarian YouTube",
