--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -806,6 +806,8 @@
   "Help me solve problems": "問題を解決するのを手伝ってください",
   "Last for {{ time }} seconds": "{{time}} 秒間続きます",
   "Search the web": "ウェブで検索する",
+  "Search the Twitter": "Twitter を検索する",
+  "Search the YouTube": "YouTube を検索する",
   "search": "検索",
   "Web Search": "ウェブ検索",
   "YouTube Search": "YouTube 検索",
