--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -806,6 +806,8 @@
   "Help me solve problems": "문제 해결을 돕 me 주세요.",
   "Last for {{ time }} seconds": "{{ time }} 초 동안 지속됩니다",
   "Search the web": "웹에서 검색하다",
+  "Search the Twitter": "트위터에서 검색하기",
+  "Search the YouTube": "유튜브에서 검색하기",
   "search": "검색",
   "Web Search": "웹 검색",
   "YouTube Search": "YouTube 검색",
