--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -806,6 +806,8 @@
   "Help me solve problems": "Ajude - me a resolver problemas",
   "Last for {{ time }} seconds": "Dura {{ time }} segundos",
   "Search the web": "Pesquisar na web",
+  "Search the Twitter": "Pesquisar na Twitter",
+  "Search the YouTube": "Pesquisar na YouTube",
   "search": "pesquisar",
   "Web Search": "Pesquisa na web",
   "YouTube Search": "Pesquisa na YouTube",
