--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -805,6 +805,8 @@
   "Help me solve problems": "Помогите мне решить проблемы",
   "Last for {{ time }} seconds": "Длится {{ time }} секунд",
   "Search the web": "Поиск в интернете",
+  "Search the Twitter": "Поиск на Twitter",
+  "Search the YouTube": "Поиск на YouTube",
   "search": "поиск",
   "Web Search": "Поиск в интернете",
   "YouTube Search": "поиск на YouTube",
