--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -806,6 +806,8 @@
   "Help me solve problems": "Bana problemleri çözmemde yardım et",
   "Last for {{ time }} seconds": "{{ time }} saniye sürer",
   "Search the web": "Web'de Ara",
+  "Search the Twitter": "Twitter'de Ara",
+  "Search the YouTube": "YouTube'de Ara",
   "search": "arama",
   "Web Search": "Web araması",
   "YouTube Search": "YouTube araması",
