--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -795,6 +795,8 @@
   "Help me solve problems": "Trợ giúp tôi giải quyết các vấn đề",
   "Last for {{ time }} seconds": "Để lại {{ time }} giây",
   "Search the web": "Tìm kiếm trên web",
+  "Search the Twitter": "Tìm kiếm trên Twitter",
+  "Search the YouTube": "Tìm kiếm trên YouTube",
   "search": "tìm kiếm",
   "Web Search": "Tìm kiếm trên web",
   "YouTube Search": "Tìm kiếm trên YouTube",
