--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -804,7 +804,9 @@
   "What does the symbol in the picture represent?": "图中的符号代表什么?",
   "Help me solve problems": "帮我解题",
   "Last for {{ time }} seconds": "持续{{ time }}秒",
-  "Search the web": "搜索网页",
+  "Search the Web": "搜索网页",
+  "Search the Twitter": "搜索推特",
+  "Search the YouTube": "搜索YouTube",
   "search": "搜索",
   "Web Search": "网络搜索",
   "YouTube Search": "YouTube 搜索",
