--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -805,7 +805,9 @@
   "What does the symbol in the picture represent?": "",
   "Help me solve problems": "",
   "Last for {{ time }} seconds": "",
-  "Search the web": "",
+  "Search the Web": "",
+  "Search the Twitter": "",
+  "Search the YouTube": "",
   "search": "",
   "Web Search": "",
   "YouTube Search": "",
