--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -738,9 +738,11 @@
   "The verification code has been verified successfully": "",
   "The verification code is invalid": "",
   "I. New User Creation Reward": "",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward,The activity lasts until January 2nd, 2025.": "",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
-  "Wallet users who have completed KYC, when they invite others to create a wallet and complete KYC, if the invitee completes check-ins consecutively for 3 times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGCs,The activity lasts until January 2nd, 2025.": "",
+  "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "",
+  "The number of people invited each day should not exceed 20.": "",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>6,000</span> DGC.":"",
   "III. Clock in Reward": "",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "",
