--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -738,9 +738,11 @@
   "The verification code has been verified successfully": "認証コードが正常に検証されました",
   "The verification code is invalid": "認証コードは無効です",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward,The activity lasts until January 2nd, 2025.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります，この活動は 2025 年 1 月 2 日まで続きます。",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
-  "Wallet users who have completed KYC, when they invite others to create a wallet and complete KYC, if the invitee completes check-ins consecutively for 3 times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGCs,The activity lasts until January 2nd, 2025.": "KYC を完了したウォレットユーザーが、他人を招待してウォレットを作成して KYC を完了させた場合、招待された者が連続して 3 回サインインを完了すると、招待者は <span style='color: rgba(184, 142, 86, 1);'>6000</span> 個の DGC の報酬を受け取ります, このイベントは 2025 年 1 月 2 日まで続きます。",
+  "Wallet users who have completed KYC invite others to create wallets and complete KYC.": "KYC を完了したウォレットのユーザーは、他の人にウォレットを作成して KYC を完了するように誘導します。",
+  "The number of people invited each day should not exceed 20.": "1 日あたりの招待人数は 20 人を超えてはいけません。",
+  "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>6,000</span> DGC.":" 招待した 1 人ごとに、招待された方が連続で 3 回ログインした場合、招待者は<span style='color: rgba(184, 142, 86, 1);'>6,000</span> DGC の報酬を受け取ります。",
   "III. Clock in Reward": "III. 出勤打刻報酬",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "認証完了後の<span style='color: rgba(184, 142, 86, 1);'>60</span>日間、出勤打刻報酬は有効です。",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span> 日間ログインして出勤打刻を行うと、<span style='color: rgba(184, 142, 86, 1);'>100</span>個の DGC 報酬を獲得できます。出勤打刻報酬は最大<span style='color: rgba(184, 142, 86, 1);'>30</span>回までです。",
