添加搜索中判断

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -591,6 +591,7 @@
   "Incorrect password": "Falsches Passwort",
   "New Chat": "Neuer Chat",
   "Search": "Suche",
+  "Searching...": "Suchend...",
   "Yesterday": "Gestern",
   "Previous 7 days": "Vorige 7 Tage",
   "Join Our Community": "Unsere Gemeinschaft beitreten",
