--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -591,6 +591,7 @@
   "Incorrect password": "",
   "New Chat": "",
   "Search": "",
+  "Searching...": "",
   "Yesterday": "",
   "Previous 7 days": "",
   "Join Our Community": "",
