--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -591,6 +591,7 @@
   "Incorrect password": "Contraseña incorrecta",
   "New Chat": "Nueva conversación",
   "Search": "Buscar",
+  "Searching...": "Buscando...",
   "Yesterday": "Ayer",
   "Previous 7 days": "Últimos 7 días",
   "Join Our Community": "Unirse a nuestra comunidad",
