--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -590,6 +590,7 @@
   "Incorrect password": "Mot de passe incorrect",
   "New Chat": "Nouveau chat",
   "Search": "Recherche",
+  "Searching...": "Recherche ...",
   "Yesterday": "Hier",
   "Previous 7 days": "Les 7 derniers jours",
   "Join Our Community": "Rejoindre notre communauté",
