--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -591,6 +591,7 @@
   "Incorrect password": "Kata sandi salah",
   "New Chat": "Percakapan Baru",
   "Search": "Pencarian",
+  "Searching...": "Mencari...",
   "Yesterday": "Kemarin",
   "Previous 7 days": "7 Hari Sebelumnya",
   "Join Our Community": "Bergabung dengan Komunitas Kami",
