--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -593,6 +593,7 @@
   "Incorrect password": "間違ったパスワード",
   "New Chat": "新しいチャット",
   "Search": "検索",
+  "Searching...": "検索中...",
   "Yesterday": "昨日",
   "Previous 7 days": "過去 7 日間",
   "Join Our Community": "コミュニティに参加する",
