--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -591,6 +591,7 @@
   "Incorrect password": "틀린 비밀번호",
   "New Chat": "새로운 채팅",
   "Search": "검색",
+  "Searching...": "탐색 중입니다...",
   "Yesterday": "어제",
   "Previous 7 days": "이전 7일",
   "Join Our Community": "우리 커뮤니티에 참가하기",
