--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -591,6 +591,7 @@
   "Incorrect password": "Senha incorreta",
   "New Chat": "Nova conversa",
   "Search": "Pesquisar",
+  "Searching...": "Procurando...",
   "Yesterday": "Ontem",
   "Previous 7 days": "Últimos 7 dias",
   "Join Our Community": "Juntar-se à nossa comunidade",
