--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -590,6 +590,7 @@
   "Incorrect password": "Неверный пароль",
   "New Chat": "Новый чат",
   "Search": "Поиск",
+  "Searching...": "ищущий...",
   "Yesterday": "Вчера",
   "Previous 7 days": "Предыдущие 7 дней",
   "Join Our Community": "Присоединиться к нашей коммьюнити",
