--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -590,6 +590,7 @@
   "Incorrect password": "รหัสผ่านไม่ถูกต้อง",
   "New Chat": "แชทใหม่",
   "Search": "ค้นหา",
+  "Searching...": "กำลังค้นหา...",
   "Yesterday": "เมื่อวาน",
   "Previous 7 days": "7 วันก่อน",
   "Join Our Community": "เข้าร่วมชุมชนของเรา",
