--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -591,6 +591,7 @@
   "Incorrect password": "Yanlış şifre",
   "New Chat": "Yeni Sohbet",
   "Search": "Ara",
+  "Searching...": "arıyor...",
   "Yesterday": "Dün",
   "Previous 7 days": "Önceki 7 Gün",
   "Join Our Community": "Topluluğumuza Katıl",
