--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -591,6 +591,7 @@
   "Incorrect password": "Mật khẩu sai",
   "New Chat": "Cuộc trò chuyện mới",
   "Search": "Tìm kiếm",
+  "Searching...": "đang tìm kiếm...",
   "Yesterday": "Hôm qua",
   "Previous 7 days": "7 ngày trước",
   "Join Our Community": "Tham gia Cộng đồng của chúng tôi",
