--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -156,6 +156,7 @@
   "Custom": "Benutzerdefiniert",
   "Customize Ollama models for a specific purpose": "Ollama-Modelle für einen bestimmten Zweck anpassen",
   "Dashboard": "Dashboard",
+  "Reward upkeep": "Belohnungsunterhaltung",
   "Database": "Datenbank",
   "December": "Dezember",
   "Default": "Standard",
@@ -825,5 +826,10 @@
   "Obtain what the content of the last question in the above questions is about, and only output the content": "Ermitteln, worum es inhaltlich bei der letzten Frage in den obigen Fragen geht und geben Sie nur den Inhalt aus",
   "Summarize based on the above YouTube search results:": "Zusammenfassen Sie anhand der obigen YouTube-Suchergebnisse:",
   "Summarize based on the above Twitter search results:": "Zusammenfassen Sie anhand der obigen Twitter-Suchergebnisse:",
-  "Summarize based on the above web search results:": "Zusammenfassen Sie anhand der obigen Websuchergebnisse:"
+  "Summarize based on the above web search results:": "Zusammenfassen Sie anhand der obigen Websuchergebnisse:",
+  "All Reward Range": "Gesamtbereich der Belohnungen",
+  "Status": "Status",
+  "starttime": "Startzeit",
+  "endtime": "Endzeit",
+  "Enter Name": "Geben Sie Ihren Namen ein"
 }
