--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -830,6 +830,7 @@
   "Status": "",
   "starttime": "",
   "endtime": "",
-  "Enter Name": ""
+  "Enter Name": "",
+  "Determine what the last question is about and output only the related search terms, with a maximum of 50 characters.": ""
 }
 
