--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -830,5 +830,6 @@
   "Status": "Status",
   "starttime": "Waktu mulai",
   "endtime": "Waktu berakhir",
-  "Enter Name": "Masukkan nama Anda"
+  "Enter Name": "Masukkan nama Anda",
+  "Determine what the last question is about and output only the related search terms, with a maximum of 50 characters.": "Tentukan apa yang dibahas dalam pertanyaan terakhir dan hanya tampilkan kata kunci pencarian yang terkait, maksimal 50 karakter."
 }
