--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -830,5 +830,6 @@
   "Status": "Durum",
   "starttime": "Başlangıç Saati",
   "endtime": "Bitiş Saati",
-  "Enter Name": "Adınızı girin"
+  "Enter Name": "Adınızı girin",
+  "Determine what the last question is about and output only the related search terms, with a maximum of 50 characters.": "Son sorunun hangi konu hakkında olduğunu belirleyin ve yalnızca ilgili arama terimlerini çıkarın, en fazla 50 karakter."
 }
